[package]
name = "yaui"
version = "0.1.0"
edition = "2021"
description = "Yet Another Unix Injector with support for Android/Android Emulator i686/x64/arm/aarch64"
repository = "https://github.com/ohchase/yaui"
homepage = "https://github.com/ohchase/yaui/"
documentation = "https://docs.rs/yaui"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yaui"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "tracing-subscriber", "sysinfo"]

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[dependencies]
clap = { version = "4.2.7", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }
sysinfo = { version = "0.29.0", optional = true }

ptrace-do = "0.1.1"
thiserror = "1.0.40"
tracing = "0.1.40"
libc = "0.2.155"
proc-maps = "0.3.1"
page_size = "0.5.0"

