[package]
name = "yaui"
version = "0.2.0"
edition = "2021"
description = "Yet Another Unix Injector with support for Android/Android Emulator i686/x64/arm/aarch64"
repository = "https://github.com/ohchase/yaui"
homepage = "https://github.com/ohchase/yaui/"
documentation = "https://docs.rs/yaui"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yaui"
required-features = ["cli"]

[dependencies]
env_logger = { version = "0.11.5", optional = true }
clap = { version = "4.5.19", features = ["derive"], optional = true }
sysinfo = { version = "0.31.4", optional = true }
clap-verbosity-flag = { version = "2.2.2", optional = true }
ptrace-do = "0.1.1"
thiserror = "1.0.40"
libc = "0.2.159"
proc-maps = "0.3.1"
page_size = "0.6.0"
log = "0.4.22"


[features]
default = ["cli"]
cli = ["clap", "clap-verbosity-flag", "sysinfo", "env_logger"]
