[package]
name = "yaui"
version = "0.2.1"
edition = "2021"
description = "Yet Another Unix Injector with support for Android/Android Emulator i686/x64/arm/aarch64"
repository = "https://github.com/ohchase/yaui"
homepage = "https://github.com/ohchase/yaui/"
documentation = "https://docs.rs/yaui"
readme = "README.md"
license = "MIT"

[[bin]]
name = "yaui"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "tracing-subscriber", "sysinfo"]

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[dependencies]
clap = { version = "4.5.31", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
sysinfo = { version = "0.33.1", optional = true }

ptrace-do = "0.1.3"
thiserror = "1.0.40"
tracing = "0.1.41"
libc = "0.2.169"
proc-maps = "0.3.1"
page_size = "0.6.0"

